# purchases-accounting-FastApi

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.template  Dockerfile  entrypoint.sh  generate_keys.sh  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_02_18_1752-2ac239819eb2_create_users_table.py  2025_02_19_0851-d77b44d88d4d_create_products_table.py  2025_02_19_0901-0f94bc7e13c3_create_receipts_table.py  2025_02_19_0903-e4564c26ed9c_create_payment_table.py  2025_02_19_0906-3059561ab980_create_receipt_products_table.py  2025_02_19_2303-0195fd936125_fixed_time_zone_for_create_at_in_.py  2025_02_20_0859-640c1585914a_added_column_total_to_reciepts_table.py
backend/authentication/: strategies.py  utils.py
backend/config/: __init__.py  config.py
backend/config/exceptions/: __init__.py  receipt.py  user.py
backend/database/: db_helper.py
backend/models/: __init__.py  base.py  payment.py  product.py  receipt.py  receipt_product.py  user.py
backend/models/mixins/: __init__.py
backend/models/utils/: __init__.py  case_converter.py
backend/repositories/: __init__.py  base.py  payment.py  product.py  receipt.py  receipt_product.py  user.py
backend/routers/: __init__.py  auth.py  dependencies.py  receipt.py
backend/schemas/: payment.py  product.py  receipt.py  receipt_product.py  user.py
backend/templates/: receipt.html
