[tool.poetry]
name = "purchases-accounting"
version = "0.1.0"
description = "Test task"
authors = ["Igor-Cegelnyk", "il.cegelnik@gmail.com"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = { version = ">=0.34.0,<0.35.0", extras = ["standart"] }
sqlalchemy = { version = ">=2.0.38,<3.0.0", extras = ["asyncio"] }
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.14.1,<2.0.0"
fastapi-users = { version = ">=14.0.1,<15.0.0", extras = ["sqlalchemy"] }
pydantic-settings = ">=2.7.1,<3.0.0"
inflect = ">=7.5.0,<8.0.0"
pyjwt = { version = ">=2.10.1,<3.0.0", extras = ["crypto"] }
bcrypt = ">=4.2.1,<5.0.0"
jinja2 = ">=3.1.5,<4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
